# Taltools

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: setup.py
src/cv/: bounding_boxes.py  images.py  iterable_video_dataset.py  videos.py
src/io/: files.py
src/logging/: print_logger.py
src/taltools/: singleton.py
src/taltools/ancan/: patients.py
src/taltools/cv/: __init__.py  bounding_boxes.py  images.py  iterable_video_dataset.py  videos.py
src/taltools/data/: __init__.py  pandas.py
src/taltools/io/: __init__.py  configurations.py
src/taltools/logging/: __init__.py  base_logger.py  neptune_logger.py  print_logger.py
taltools/cv/: __init__.py  videos.py
taltools/data/: __init__.py  pandas.py
taltools/io/: __init__.py  configurations.py
taltools/logging/: __init__.py  print_logger.py
