[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taltools"
version = "1.1.0"
description = "Skeleton and CV utilities"
license = { text = "Apache-2.0" }
authors = [{ name = "Tal Barami", email = "baramit@post.bgu.ac.il" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "pillow",
    "ffmpeg-python",
    "pandas",
]

[project.optional-dependencies]
torch   = ["torch"]
neptune = ["neptune"]
data    = ["scipy", "omegaconf"]
logging = ["tabulate"]
all     = ["torch", "neptune", "scipy", "omegaconf", "tabulate"]

[tool.hatch.build.targets.wheel]
packages = ["src/taltools"]
